[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "eks_switcher"
author = "Josh Armitage"
author-email = "josh.armitage@outlook.com"
home-page = "https://github.com/JoshArmi/EKSClusterSwitcher"
requires = [
    "boto3",
    "click",
    "jinja2",
]
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
eks-switcher = "eks_switcher:main"
